--- a/style-animated.css
+++ b/style-animated.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   display: flex;
   align-items: center;
@@ -21,92 +25,102 @@ body {
   padding: 80px;
 }
 
-#logo,
-img {
-  margin: 30px auto 30px auto;
-  width: 180px;
+#menu {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px
+}
+
+#logo {
+  display: flex;
+  justify-content: center;
+  margin: 40px 0;
+}
+#logo img{
   border-radius: 50%;
+  width: 180px;
 }
 
 #menu ul {
-  margin: 0 auto 50px auto;
   display: flex;
-  justify-content: center;
-  font-size: 1.8em;
-  font-weight: 700;
-  background-color: rgba(0, 0, 0, 0.6);
-  border-radius: 7px;
-  width: 300px;
-  list-style: none;
+  justify-content: center; 
   gap: 80px;
+  list-style: none;
+  padding: 0;
+  margin: 30px 0 0;
+ }
+
+#menu li a {
+    text-decoration: none;
+    font-size: 1.8em;
+    font-weight: bold;
+    color: white;
 }
 
-
-#menu li {
-  display: flex;
-  align-items: center;
-}
-
-#menu a {
-  text-decoration: none;
-  color: white;
-}
-section{
+section {
   width: 100%;
   margin: 20px;
   border: ridge 5px rgb(255, 102, 0);
 }
-section a{
+
+section a {
   color: rgb(16, 250, 55);
   font-size: 17px;
   font-weight: 800;
 }
-section p{
-  background-color: rgba(0, 0, 0, 0.608);
+
+section p {
+  background-color: rgba(0, 0, 0, 0.673);
   color: white;
   font-size: 20px;
   padding: 15px;
-}
-section h2{
-  color: white;
-  background-color: rgba(0, 0, 0, 0.608);
-  margin: 20px ;
-  text-align: center;
-  border: none;
+  width: 700px;
   border-radius: 7px;
-}
-section img{
-  display: block;
-  width: 200px;
-  margin: 0 auto 20px auto;
-  cursor: pointer;
+  margin: auto;
 }
 
-/* TITRE */
-#title1 {
+section h2 {
   color: white;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.729);
+  margin: 20px auto 20px auto;
   text-align: center;
-  font-size: 30px;
+  border-radius: 7px;
+  padding: 10px;
+  width: 700px;
+}
+
+#title1 {
+  width: 700px;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.724);
+  text-align: center;
+  font-size: 2em;
   font-weight: 700;
-  margin: 0 auto 0 auto;
-  border: none;
+  margin: 20px auto 0 auto;
   border-radius: 7px;
 }
-#textDeco{
+
+#textDeco {
   width: 100px;
-  margin:20px auto 20px auto;
+  margin: 20px auto 20px auto;
 }
-#textDeco h1{
+
+#textDeco h1 {
   margin-left: -170px;
   width: 700px;
   font-size: 7em;
   background: url(images/text.png);
   background-size: cover;
   background-position: top;
-  background-clip: text; 
+  background-clip: text;
   color: transparent;
-  
+}
+section .imgPreview{
+  display: flex;
+  width: 180px;
+  border-radius: 50%;
+  margin:0 auto 20px;
 }
 
 #formontact h1 {
@@ -115,7 +129,7 @@ section img{
   margin: 0 auto 30px auto;
   color: white;
   text-align: center;
-font-size: 28px;
+  font-size: 28px;
 }
 
 form {
@@ -140,7 +154,8 @@ textarea {
   font-weight: 700;
   transition: box-shadow 0.3s ease;
 }
-input{
+
+input {
   margin-top: 8px;
 }
 
